--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -2,4 +2,4 @@
 # AWS S3 credentials for datalake sync
 aws_access_key_id: "{{ vault_aws_access_key_id }}"
 aws_secret_access_key: "{{ vault_aws_secret_access_key }}"
-aws_session_token: "{{ vault_aws_session_token }}"
+# aws_session_token: "{{ vault_aws_session_token }}"
