--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -26,7 +26,7 @@
     netconf_port: 830
     output_dir: "/tmp/semaphore/output"
     raw_ml_data_dir: "/tmp/semaphore/raw_ml_data"
-    prometheus_pushgateway: "http://pushgateway:9091"
+    prometheus_pushgateway: "{{ lookup('env', 'PROMETHEUS_PUSHGATEWAY') | default('http://10.221.80.101:9091', true) }}"
     rpc_config_file: "rpc_commands.yml"
     # Optional: Comma-separated list of interfaces to monitor (e.g., "et-0/0/32,et-0/0/33")
     # If not set or empty, all interfaces will be monitored
@@ -158,54 +158,6 @@
         msg: "{{ merge_result.stdout_lines }}"
       when: merge_result is defined and merge_result.stdout_lines is defined
     
-    - name: Write optics diagnostics to Parquet for ML training
-      script: >
-        scripts/write_to_parquet.py
-        --input "{{ output_dir }}/{{ inventory_hostname }}_optics_diagnostics_metrics.json"
-        --base-dir "{{ output_dir }}/ml_data"
-        --metric-type "optical"
-        --device "{{ inventory_hostname }}"
-      args:
-        executable: python3
-        chdir: "{{ playbook_dir }}"
-      environment:
-        PYTHONPATH: "{{ playbook_dir }}"
-      when: "'optics_diagnostics' in rpc_config.rpc_commands | map(attribute='name')"
-      register: optics_parquet_result
-      ignore_errors: yes
-    
-    - name: Write interface statistics to Parquet for ML training
-      script: >
-        scripts/write_to_parquet.py
-        --input "{{ output_dir }}/{{ inventory_hostname }}_interface_statistics_metrics.json"
-        --base-dir "{{ output_dir }}/ml_data"
-        --metric-type "interface_stats"
-        --device "{{ inventory_hostname }}"
-      args:
-        executable: python3
-        chdir: "{{ playbook_dir }}"
-      environment:
-        PYTHONPATH: "{{ playbook_dir }}"
-      when: "'interface_statistics' in rpc_config.rpc_commands | map(attribute='name')"
-      register: interface_parquet_result
-      ignore_errors: yes
-    
-    - name: Write PIC details to Parquet for ML training
-      script: >
-        scripts/write_to_parquet.py
-        --input "{{ output_dir }}/{{ inventory_hostname }}_pic_detail_metrics.json"
-        --base-dir "{{ output_dir }}/ml_data"
-        --metric-type "pic_detail"
-        --device "{{ inventory_hostname }}"
-      args:
-        executable: python3
-        chdir: "{{ playbook_dir }}"
-      environment:
-        PYTHONPATH: "{{ playbook_dir }}"
-      when: pic_detail_result is defined and pic_detail_result.rc == 0
-      register: pic_parquet_result
-      ignore_errors: yes
-    
     - name: Push metrics to Prometheus Pushgateway
       script: >
         scripts/push_to_prometheus.py
@@ -261,6 +213,7 @@
       environment:
         PYTHONPATH: "{{ playbook_dir }}"
       register: hourly_parquet_result
+      ignore_errors: yes
     
     - name: Display hourly Parquet results
       debug:
