--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -11,12 +11,12 @@
         run_date: "{{ lookup('pipe', 'date -u +%Y-%m-%d') }}"
         run_hour: "{{ lookup('pipe', 'date -u +%H') }}"
         partition_dir: "dt={{ lookup('pipe', 'date -u +%Y-%m-%d') }}/hr={{ lookup('pipe', 'date -u +%H') }}"
-        inventory_basename: "{{ inventory_file | basename | regex_replace('\\.ya?ml$', '') }}"
+        inventory_group: "{{ groups.keys() | difference(['all', 'ungrouped']) | first }}"
         cacheable: yes
     
     - name: Display run timestamp
       debug:
-        msg: "Playbook run partition: {{ partition_dir }}, Inventory: {{ inventory_basename }}"
+        msg: "Playbook run partition: {{ partition_dir }}, Group: {{ inventory_group }}"
 
 - name: Collect Junos Telemetry and Export to Prometheus
   hosts: all
@@ -25,7 +25,7 @@
   
   vars:
     netconf_port: 830
-    output_dir: "/tmp/semaphore/output/{{ hostvars['localhost']['inventory_basename'] }}_{{ hostvars['localhost']['run_timestamp'] }}"
+    output_dir: "/tmp/semaphore/output/{{ hostvars['localhost']['inventory_group'] }}_{{ hostvars['localhost']['run_timestamp'] }}"
     raw_ml_data_dir: "/tmp/semaphore/raw_ml_data"
     prometheus_pushgateway: "{{ lookup('env', 'PROMETHEUS_PUSHGATEWAY') | default('http://10.221.80.101:9091', true) }}"
     rpc_config_file: "rpc_commands.yml"
@@ -177,7 +177,7 @@
   vars:
     # output_dir: "{{ '../output' if playbook_dir != '/ansible' else '/output' }}"
     # raw_ml_data_dir: "{{ '/raw_ml_data' if playbook_dir == '/ansible' else '../raw_ml_data' }}"
-    output_dir: "/tmp/semaphore/output/{{ hostvars['localhost']['inventory_basename'] }}_{{ hostvars['localhost']['run_timestamp'] }}"
+    output_dir: "/tmp/semaphore/output/{{ hostvars['localhost']['inventory_group'] }}_{{ hostvars['localhost']['run_timestamp'] }}"
     raw_ml_data_dir: "/tmp/semaphore/raw_ml_data"
   tasks:
     - name: Get runner name from container environment
