--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -76,6 +76,7 @@
       loop: "{{ rpc_results.results }}"
       loop_control:
         label: "{{ item.item.name }}"
+      no_log: true
     
     - name: Determine interface filter for this device
       set_fact:
@@ -98,6 +99,7 @@
       loop_control:
         label: "{{ item.item.name }}"
       register: parse_results
+      no_log: true
     
     - name: Display parsing results
       debug:
