--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -131,7 +131,7 @@ services:
       ANSIBLE_HOST_KEY_CHECKING: 'false'
       HOME: /home/semaphore
       CLUSTER_NAME: ${CLUSTER_NAME}
-      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME"]'
+      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME","PROMETHEUS_PUSHGATEWAY"]'
       PROMETHEUS_PUSHGATEWAY: ${PROMETHEUS_PUSHGATEWAY}
     networks:
       - monitoring
@@ -160,7 +160,7 @@ services:
       ANSIBLE_HOST_KEY_CHECKING: 'false'
       HOME: /home/semaphore
       CLUSTER_NAME: ${CLUSTER_NAME}
-      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME"]'
+      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME","PROMETHEUS_PUSHGATEWAY"]'
       PROMETHEUS_PUSHGATEWAY: ${PROMETHEUS_PUSHGATEWAY}
     networks:
       - monitoring
@@ -189,7 +189,7 @@ services:
       ANSIBLE_HOST_KEY_CHECKING: 'false'
       HOME: /home/semaphore
       CLUSTER_NAME: ${CLUSTER_NAME}
-      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME"]'
+      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME","PROMETHEUS_PUSHGATEWAY"]'
       PROMETHEUS_PUSHGATEWAY: ${PROMETHEUS_PUSHGATEWAY}
     networks:
       - monitoring
@@ -218,7 +218,7 @@ services:
       ANSIBLE_HOST_KEY_CHECKING: 'false'
       HOME: /home/semaphore
       CLUSTER_NAME: ${CLUSTER_NAME}
-      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME"]'
+      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME","PROMETHEUS_PUSHGATEWAY"]'
       PROMETHEUS_PUSHGATEWAY: ${PROMETHEUS_PUSHGATEWAY}
     networks:
       - monitoring
@@ -247,7 +247,7 @@ services:
       ANSIBLE_HOST_KEY_CHECKING: 'false'
       HOME: /home/semaphore
       CLUSTER_NAME: ${CLUSTER_NAME}
-      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME"]'
+      SEMAPHORE_FORWARDED_ENV_VARS: '["SEMAPHORE_RUNNER_NAME","CLUSTER_NAME","PROMETHEUS_PUSHGATEWAY"]'
       PROMETHEUS_PUSHGATEWAY: ${PROMETHEUS_PUSHGATEWAY}
     networks:
       - monitoring
